--- a/app/(pages)/_components/AlumniPageCard/AlumniPageCard.module.scss
+++ b/app/(pages)/_components/AlumniPageCard/AlumniPageCard.module.scss
@@ -4,7 +4,7 @@
   flex-shrink: 0;
 
   border-radius: 15px;
-  background: var(--light-purple, #CFBAE8);
+  background: var(--light-purple);
   box-shadow: 0px 0px 7px 6px rgba(152, 29, 156, 0.10);
 
   display: flex;
@@ -21,7 +21,7 @@
   width: 251px;
   height: 352px;
   flex-shrink: 0;
-  background: var(--white, #FAFAFA);
+  background: var(--white);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   
 
