--- a/app/(pages)/conference/page.module.scss
+++ b/app/(pages)/conference/page.module.scss
@@ -1,5 +1,3 @@
-// @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 .page
 {
     display: flex;
@@ -12,18 +10,18 @@
     display: flex;
     flex-direction: column;
     gap: 52px;
-    margin-top: 233px;
-    margin-left: 100px;
-    margin-right: 100px;
+    padding-top: 233px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .lowerPage
 {
     display: flex;
     gap: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 147px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 147px;
 }
 
 .titleBlock
@@ -48,25 +46,20 @@
 
     h1 
     {
-        // position: relative;
-        // width: 646px;
         height: 160px;
         color: var(--gold);
         font-weight: 700;
         font-size: 64px;
         line-height: 80px;
-        letter-spacing: 0px;
     }
     
     h2
     {
-        // position: relative;
         height: 48px;
         color: var(--dark-purple);
         font-weight: 700;
         font-size: 32px;
         line-height: 100%;
-        letter-spacing: 0px;
     }
 }
 
@@ -99,14 +92,12 @@
         font-size: 48px;
         color: var(--gold);
         height: 72px;
-        letter-spacing: 0px;
     }
 
     h2 
     {
         font-size: 32px;
         color: var(--dark-purple);
-        letter-spacing: 0px;
         height: 48px;
     }
 }
@@ -116,9 +107,7 @@
     position: relative;
     width: 49%;
     height: 230px;
-    flex-shrink: 0px;
     border-radius: 10px;
-    overflow: hidden;
 }
 
 .summaryImageContainer
@@ -126,9 +115,7 @@
     position: relative;
     width: 34%;
     height: 254px;
-    flex-shrink: 0px;
     border-radius: 10px;
-    overflow: hidden;
 }
 
 .involvementImageContainer
@@ -136,9 +123,7 @@
     position: relative;
     width: 43%;
     height: 512px;
-    flex-shrink: 0px;
     border-radius: 10px;
-    overflow: hidden;
 }
 
 .conferenceImage
