--- a/app/(pages)/calendar/page.module.scss
+++ b/app/(pages)/calendar/page.module.scss
@@ -60,9 +60,7 @@
   }
 
   .calendarContent {
-    width: 1309px;
-    height: 417px;
-
+    width: 100%;
     border: solid black;
     border-radius: 10px;
   }
