--- a/app/(pages)/(home)/page.module.scss
+++ b/app/(pages)/(home)/page.module.scss
@@ -1,55 +1,59 @@
-.aboutUs {
-    width: 1312;
-    height: 686;
+.aboutUsHeader {
+    width: 293px;
+    height: 96px;
     top: 156px;
-    left: 100px;    
-    
-    h2 {
-        width: 293px;
-        height: 96px;
-        top: 156px;
-        left: 100px;
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 64px;
-        line-height: 100%;
-        letter-spacing: 0px;
-    }
+    left: 100px;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 100%;
+    letter-spacing: 0px;
+    color: var(--gold);
+}
 
+.aboutUs {
+    width: 1312px;
+    height: 686px;
+    top: 156px;
+    left: 100px;
+    display: flex;
     p {
-        width: 866;
-        height: 576;
+        width: 866px;
+        height: 576px;
         top: 266px;
         left: 100px;
         font-family: Poppins;
         font-weight: 400;
         font-size: 24px;
         line-height: 100%;
-        letter-spacing: 0%;    
+        letter-spacing: 0%;   
+        color: var(--black);     
     }
 }
 
+.mascotHeader {
+    width: 387px;
+    height: 96px;
+    top: 914px;
+    left: 101px;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: var(--gold);
+}
+
 .mascot { 
-    width: 1262;
-    height: 731;
+    width: 1262px;
+    height: 731px;
     top: 914px;
     left: 101px;    
-
-    h2 {
-        width: 387;
-        height: 96;
-        top: 914px;
-        left: 101px;
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 64px;
-        line-height: 100%;
-        letter-spacing: 0%;
-    }
-
+    gap: 42px;
+    display: flex;
     p {
-        width: 868;
-        height: 612;
+        width: 868px;
+        height: 612px;
         top: 1033px;
         left: 101px;
         font-family: Poppins;
@@ -57,47 +61,54 @@
         font-size: 24px;
         line-height: 100%;
         letter-spacing: 0%;
+        color: var(--black);
     }
 }
 
-.values {
-    width: 1312;
-    height: 1164.359375;
+.valuesHeader {
+    width: 421px;
+    height: 118px;
     top: 1754px;
-    left: 101px;    
-  
-    h2 {
-        width: 421;
-        height: 118;
-        top: 1754px;
-        left: 546px;
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 64px;
-        line-height: 100%;
-        letter-spacing: 0%;
-        text-align: center;
-    }
-  
-    .valuesBox {
-        display: flex;
-        flex-direction: column;
-        width: 1309;
-        height: 288;
+    left: 546px;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    margin: 0 auto;
+    color: var(--gold);
+}
+
+.values {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 40px;
+    .creativity, .community, .authenticity {
+        width: 1309px;
+        height: 288px;
         top: 1874px;
         left: 103px;
-        
-        h3 {
-            width: 421.41327;
-            height: 48;
-            font-family: Poppins;
-            font-weight: 600;
-            font-size: 32px;
-            line-height: 100%;
-            letter-spacing: 0;
-            text-align: center;
+        display: flex;
+        flex-direction: column;
+        .icon {
+            width: 421.41326904296875px;
+            height: 288px;
+            top: 1874px;
+            left: 103px;
+            gap: 15px;    
+            h3 {
+                width: 421.41326904296875;
+                height: 48;
+                font-family: Poppins;
+                font-weight: 600;
+                font-size: 32px;
+                line-height: 100%;
+                letter-spacing: 0%;
+                text-align: center;
+                color: var(--black);                        
+            }
         }
-        
         p {
             width: 868;
             height: 144;
@@ -107,89 +118,67 @@
             font-weight: 400;
             font-size: 24px;
             line-height: 100%;
-            letter-spacing: 0;
-        }
-        
-        .creativity {
-            display: flex;
-            width: 1309;
-            height: 288;
-            top: 1874px;
-            left: 103px;
-        }
-  
-        .community {
-            display: flex;
-            width: 1308;
-            height: 354.35944;
-            top: 2213px;
-            left: 103px;
-        }
-  
-        .authenticity {
-            display: flex;
-            width: 1312;
-            height: 354.35944;
-            top: 2564px;
-            left: 101px;
+            letter-spacing: 0%;
+            color: var(--black);                
         }
     }
 }
 
+.boardHeader {
+    width: 333px;
+    height: 96px;
+    top: 2962px;
+    left: 577px;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: var(--gold);
+    text-align: center;
+}
+
 .board {
-    width: 1181;
-    height: 1128;
+    width: 1181px;
+    height: 1128px;
     top: 2962px;
     left: 165px;    
-  
-    h2 {
-        width: 333;
-        height: 96;
-        top: 2962px;
-        left: 577px;
-        font-family: Poppins;
-        font-weight: 700;
-        font-size: 64px;
-        line-height: 100%;
-        letter-spacing: 0%;
-    }
-  
     .boardGrid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 45px 45px; 
         justify-content: center;
     }
-  
     .member {
-        width: 300;
-        height: 408;
+        width: 300px;
+        height: 408px;
         top: 3140px;
         left: 165px;
         gap: 15px;        
-  
+        text-align: center;
         img {
-            width: 225;
-            height: 225;
+            width: 225px;
+            height: 225px;
             border-radius: 112.5px;
-            border-radius: 50%;            
+            border-radius: 50%;         
+            margin-bottom: 15px;   
         }
-  
         h4 {
             font-family: Poppins;
             font-weight: 700;
             font-size: 32px;
             line-height: 100%;
             letter-spacing: 0%;
+            color: var (--black);
             text-align: center;
         }
-  
         p {
             font-family: Poppins;
             font-weight: 400;
             font-size: 20px;
             line-height: 100%;
             letter-spacing: 0%;
+            color: var (--black);
             text-align: center;
         }
     }
